--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
+  ROM_URL: https://l5v6hiaaa2ahu0klppl7ii670mmrkp3bojd1rl92k4j6v945bq1fu4sp.qc.x.bsgslb.cn:10443/xdispatchb62ea3af3b3fc138/bigota.d.miui.com/21.4.15/miui_STAR_21.4.15_8d0e8ed07d_11.0.zip?bsreqid=d67c89dd65ff26cf60d319e2cf370e2a
   ROM_NAME: MIUI
   BUILD_TYPE: ab
   TZ: Asia/Shanghai
@@ -47,9 +47,7 @@ jobs:
               sudo bash ./setup.sh
        
        - name: Download Stock Rom & Generate GSI
-         run: |
-              cd  $GITHUB_WORKSPACE/ErfanGSIs
-              sudo bash ./url2GSI.sh -c --$BUILD_TYPE $ROM_URL $ROM_NAME
+         run: sudo bash ./url2GSI.sh -c --$BUILD_TYPE $ROM_URL $ROM_NAME
        
        - name: Zip GSI  
          run: |
